--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,3 +27,4 @@ SET(LIBRARY_OUTPUT_PATH ${lib_dir}/lib)
 # add subdirectories
 add_subdirectory(test)
 add_subdirectory(tcp_server)
+add_subdirectory(http_server)
