--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,10 +21,16 @@ set(src_dir "@PROJECT_SOURCE_DIR@")
 set(bin_dir "@PROJECT_BINARY_DIR@")
 set(lib_dir "@PROJECT_BINARY_DIR@")
 
+set(SOLUTION_INCLUDE_DIRS
+    ${src_dir}/tcp_server
+    ${src_dir}/aipayserver
+)
+
 SET(EXECUTABLE_OUTPUT_PATH ${bin_dir}/bin)
 SET(LIBRARY_OUTPUT_PATH ${lib_dir}/lib)
 
 # add subdirectories
-add_subdirectory(test)
 add_subdirectory(tcp_server)
+add_subdirectory(aipayserver)
 add_subdirectory(http_server)
+add_subdirectory(test)
